[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.60"
openssl-sys = "0.9.96"
bitcoin = "0.31.0"
rand = "0.8.5"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"